Improve pref UI