@@ -94,7 +94,7 @@ public class ViewerPrefView extends AbstractItemDialogPage {
             }
           }
         });
-    slider.setValue(map.get(actions.get(0)));
+    slider.setValue(map.get(actions.getFirst()));
     slider.addChangeListener(
         e -> {
           Object item = comboBox.getSelectedItem();
@@ -158,9 +158,12 @@ public class ViewerPrefView extends AbstractItemDialogPage {
 
     final JPanel otherPanel = GuiUtils.getVerticalBoxLayoutPanel();
     otherPanel.setBorder(GuiUtils.getTitledBorder(Messages.getString("ViewerPrefView.other")));
-    otherPanel.add(GuiUtils.getFlowLayoutPanel(checkBoxWLcolor));
-    otherPanel.add(GuiUtils.getFlowLayoutPanel(checkBoxLevelInverse));
-    otherPanel.add(GuiUtils.getFlowLayoutPanel(checkBoxApplyPR));
+    otherPanel.add(
+        GuiUtils.getFlowLayoutPanel(ITEM_SEPARATOR_SMALL, ITEM_SEPARATOR, checkBoxWLcolor));
+    otherPanel.add(
+        GuiUtils.getFlowLayoutPanel(ITEM_SEPARATOR_SMALL, ITEM_SEPARATOR, checkBoxLevelInverse));
+    otherPanel.add(
+        GuiUtils.getFlowLayoutPanel(ITEM_SEPARATOR_SMALL, ITEM_SEPARATOR, checkBoxApplyPR));
     otherPanel.add(
         GuiUtils.getFlowLayoutPanel(new JLabel(Messages.getString("overlay.color")), overlayColor));
     add(otherPanel);
